# Chat-application

./: README.md
GABRIEL_FRANCHI_JALON1/: CMakeCache.txt
GABRIEL_FRANCHI_JALON1/src/: CMakeCache.txt  Makefile  cmake_install.cmake
GABRIEL_FRANCHI_JALON1/src/jalon01/: Makefile  RE216_JALON01_CLIENT  RE216_JALON01_SERVER  client.c  cmake_install.cmake
GABRIEL_FRANCHI_JALON2/src/jalon01/: server.c
GABRIEL_FRANCHI_JALON3/Jalon3_loic23.10.2016/src/: CMakeLists.txt~
GABRIEL_FRANCHI_JALON3/Jalon3_loic23.10.2016/src/jalon03/: client.c  fonction_res216.c  server.c  user.c  user.h
GABRIEL_FRANCHI_JALON4/Jalon4fonctionnel/src/: CMakeLists.txt
GABRIEL_FRANCHI_JALON4/Jalon4fonctionnel/src/jalon04/: CMakeLists.txt  client.c  fonction.c  fonction.h  salon.c  salon.h  server.c  user.c  user.h
GABRIEL_FRANCHI_JALON5/Jalon5/src/jalon05/: CMakeLists.txt  client.c  file.c  file.h  fonction.c  fonction.h  salon.c  salon.h  server.c  texte.txt  user.c  user.h
